2006-04-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.[ch],
        gtksourceview/gtksourceview.[ch]: made "style-scheme" a property
        of GtkSourceBuffer, not of GtkSourceView. Removed gtk_source_view_set_style_scheme,
        added gtk_source_buffer_(get|set)_style_scheme, and made view get style
        scheme from the buffer it displays.
        * gtksourceview/gtksourcestylescheme.c (_gtk_source_style_scheme_apply): made
        it accept NULL, so it's possible to set NULL style scheme for a GtkSourceView.
        * tests/test-widget.c: modified appropriately.

2006-04-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/idl.lang: fixed broken comment-start pattern.

2006-04-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceiter.c (forward_chars_with_skipping): do skip
        invisible chars.

2006-04-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceiter.c: renamed strbreakup() to breakup_string(),
        'strbreakup' is a reserved name.

2006-04-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/c.lang: highlight XPM files.

2006-04-07  Yevgen Muntyan  <muntyan@tamu.edu>

	* acinclude.m4 (GTK_SOURCE_VIEW_AC_PCRE): require pcre-6.7.
	* configure.in: report whether system pcre is used.

2006-04-07  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c: (file_parse): forgot to commit last time.
	* gtksourceview/libegg/regex/eggregex.c: (egg_regex_optimize): do set pattern->extra
        member after optimizing.
	* tests/test-widget.c: removed debug_thing() and debug_thing2().
	* gtksourceview/language-specs/cpp.lang: moved keywords to keywords section.
	* gtksourceview/language-specs/gtk-doc.lang: make sure */ closes gtk-doc comment.
	* gtksourceview/language-specs/makefile.lang: highlight ${foo} like $(foo).
	* gtksourceview/language-specs/po.lang: use "location" style instead of "others-2".
