@@ -1453,6 +1453,7 @@ gtk_source_view_expose (GtkWidget      *widget,
 			gint height;
 			gint win_y;
 			GdkGC *gc;
+			gint margin;
 
 			gtk_text_buffer_get_iter_at_mark (text_view->buffer,
 							  &cur,
@@ -1484,10 +1485,15 @@ gtk_source_view_expose (GtkWidget      *widget,
 			else
 				gc = widget->style->bg_gc[GTK_WIDGET_STATE (widget)];
 
+			if (text_view->hadjustment)
+				margin = gtk_text_view_get_left_margin (text_view) - (int) text_view->hadjustment->value;
+			else
+				margin = gtk_text_view_get_left_margin (text_view);
+
 			gdk_draw_rectangle (event->window,
 					    gc,
 					    TRUE,
-					    redraw_rect.x + MAX (0, gtk_text_view_get_left_margin (text_view) - 1),
+					    redraw_rect.x + MAX (0, margin - 1),
 					    win_y,
 					    redraw_rect.width,
 					    height);
